<resources>
    <string name="app_name">Quiz Master</string>
    <string name="login">LOGIN</string>
    <string name="don_t_have_a_account">Don\'t have a Account?</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signup">SignUp</string>
    <string name="enter_email">Enter EmailID</string>
    <string name="send_link">SEND LINK</string>
    <string name="enter_quiz_code">Enter Quiz Code</string>
    <string name="start">Start</string>
    <string name="take_quiz">Take QUiz</string>
    <string name="previous">previous</string>
    <string name="next">Next</string>
    <string name="question">Question</string>
    <string name="finish">Finish</string>
    <string name="quiz_code">Quiz-Code:</string>
    <string name="let_s_start">Let\'s Start . . .</string>
    <string name="forgot_password">FORGOT PASSWORD</string>
    <string name="email">Email:</string>
    <string name="welcome">WELCOME</string>
    <string name="password">Password:</string>
    <string name="time">time</string>
    <string name="your_score_65">Your Score:65</string>
    <string name="what_country_does_this_flag_belong_to">What country does this flag belong to?</string>
    <string name="_0_10">0/10</string>
    <string name="apple">Apple</string>
    <string name="result">RESULT</string>
    <string name="correct">Correct</string>
    <string name="_0">0</string>
    <string name="incoorect">Incoorect</string>
    <string name="not_attempted">Not Attempted</string>
    <string name="total_question">Total Question</string>
    <string name="home">HOME</string>
    <string name="skiped">Skiped</string>
    <string name="register">Register</string>
    <string name="name">Name:</string>
    <string name="confirm_password">Confirm Password:</string>
</resources>