<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".quizquestionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:orientation="vertical">

        <TextView
            android:id="@+id/editTextTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="10dp"
            android:ems="10"
            android:gravity="end"
            android:text="@string/time"
            android:textColor="@color/black"
            android:textSize="20sp" />


        <TextView
            android:id="@+id/edityourscore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textStyle="bold"
            android:layout_marginStart="10dp"
            android:ems="10"
            android:gravity="start"
            android:text="@string/your_score_65"
            android:textColor="@color/black"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/tv_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:layout_marginStart="10dp"
            android:textStyle="bold"
            android:gravity="start"

            android:textColor="@color/black"
            android:textSize="22sp"
            android:text="@string/what_country_does_this_flag_belong_to" />


        <LinearLayout
            android:id="@+id/ll_progress_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:indeterminate="false"
                android:max="10"
                android:progressTint="@color/Green"
                android:paddingEnd="10dp"
                android:minHeight="50dp"
                android:progress="0" />

            <TextView
                android:paddingEnd="5dp"
                android:paddingStart="1dp"
                android:id="@+id/tv_progress_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:text="@string/_0_10" />
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="35dp"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/tv_option_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:textAllCaps="false"
            android:paddingStart="10dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/buttonbackground"
            android:layout_marginStart="25dp"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:autoSizeTextType="uniform"
            android:layout_marginBottom="7dp"
            android:text="@string/apple"
            tools:ignore="RtlSymmetry" />

            <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/tv_option_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
                android:paddingStart="10dp"
                android:layout_marginEnd="25dp"
                android:textAllCaps="false"
                android:layout_marginStart="25dp"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:autoSizeTextType="uniform"
            android:layout_marginBottom="7dp"
            android:background="@drawable/buttonbackground"
            android:text="@string/apple"
                tools:ignore="RtlSymmetry" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/tv_option_three"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:paddingStart="10dp"
            android:textAllCaps="false"
            android:layout_marginEnd="25dp"
            android:layout_marginStart="25dp"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:autoSizeTextType="uniform"
            android:layout_marginBottom="7dp"
            android:background="@drawable/buttonbackground"
            android:text="@string/apple"
            tools:ignore="RtlSymmetry" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/tv_option_four"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:paddingStart="10dp"
            android:layout_marginEnd="25dp"
            android:layout_marginStart="25dp"
            android:background="@drawable/buttonbackground"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textAllCaps="false"
            android:autoSizeTextType="uniform"
            android:layout_marginBottom="7dp"
            android:text="@string/apple"
            tools:ignore="RtlSymmetry" />

   <LinearLayout
       android:layout_width="match_parent"
       android:orientation="horizontal"
       android:layout_marginTop="35dp"
       android:layout_height="match_parent" >
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/previous"
            android:background="@drawable/prevoius_next_button_backgound"
            android:textAlignment="center"
            android:paddingStart="11dp"
            android:paddingEnd="11dp"
            android:drawablePadding="10dp"
            android:layout_marginStart="15dp"
            android:drawableStart="@drawable/ic_baseline_arrow_circle_left_24"
            android:textColor="#E604F804"
            android:textSize="23sp"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next"
                android:background="@drawable/prevoius_next_button_backgound"
                android:textAlignment="center"
                android:paddingStart="32dp"
                android:paddingEnd="32dp"
                android:layout_gravity="center"
                android:drawablePadding="10dp"
                android:layout_marginEnd="15dp"
                android:backgroundTint="@color/Green"
                android:layout_marginStart="25dp"
                android:drawableEnd="@drawable/ic_baseline_arrow_circle_right_24"
                android:textColor="@color/white"
                android:textSize="23sp"/>
        </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</ScrollView>