<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"

    android:background="@drawable/bg_welcome"
    tools:context=".SignUp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_welcome"
        android:gravity="center"
        android:isScrollContainer="true"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:cardCornerRadius="25dp"
            tools:ignore="MissingConstraints">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:textAllCaps="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="35dp"
                    android:fontFamily="@font/josefinsans_bold"
                    android:gravity="center"
                    android:layout_gravity="center"

                    android:text="@string/register"
                    android:textColor="#4E4D4D"
                    android:textSize="30sp"
                    android:textStyle="bold|italic" />
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="20dp"
                    android:textColorHint="@color/red"
                    app:boxCornerRadiusBottomStart="15dp"
                    app:boxCornerRadiusTopEnd="15dp"
                    app:boxCornerRadiusTopStart="15dp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:autofillHints="name"
                    android:hint="@string/name"
                    android:inputType="textPersonName"
                    android:textColor="@color/black"
                    android:textColorHint="@color/colorPrimary" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:textColorHint="@color/red"
                    app:boxCornerRadiusBottomStart="15dp"
                    app:boxCornerRadiusTopEnd="15dp"
                    app:boxCornerRadiusTopStart="15dp">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/emailaddresssign"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:autofillHints="emailAddress"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/black"
                        android:textColorHint="@color/colorPrimary" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:textColorHint="@color/red"
                    app:boxCornerRadiusBottomStart="15dp"
                    app:boxCornerRadiusTopEnd="15dp"
                    app:boxCornerRadiusTopStart="15dp">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/passwordsign"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:autofillHints="password"
                        android:hint="@string/password"
                        android:inputType="textVisiblePassword"
                        android:textColor="@color/black"
                        android:textColorHint="@color/colorPrimary" />

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:textColorHint="@color/red"
                    app:boxCornerRadiusBottomStart="15dp"
                    app:boxCornerRadiusTopEnd="15dp"
                    app:boxCornerRadiusTopStart="15dp">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/password_final"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:autofillHints="password"
                        android:hint="@string/confirm_password"
                        android:inputType="textPassword"
                        android:textColor="@color/black"
                        android:textColorHint="@color/colorPrimary" />

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/registerbutton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="49dp"
                    android:layout_marginTop="33dp"
                    android:layout_marginEnd="51dp"
                    android:background="@drawable/shapelogin"
                    android:paddingTop="7dp"
                    android:paddingBottom="7dp"
                    android:textAllCaps="false"
                    android:text="@string/register"
                    android:layout_marginBottom="25dp"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:textSize="31sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <ProgressBar
            android:id="@+id/signupprogressbar"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:progress="0"
            android:visibility="invisible"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="35dp"
            android:minHeight="25dp"

            android:indeterminate="true"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</RelativeLayout>
